--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Muhammad Project</string>
+    <string name="name">Name</string>
+    <string name="age">Age</string>
+    <string name="phone">Phone Number</string>
+    <string name="played">Have You Played Before?</string>
+    <string name="yes">YES</string>
+    <string name="no">NO</string>
+    <string name="waiting">Waiting List</string>
+    <string name="search">Search Now</string>
 </resources>
